--- a/index.ipynb
+++ b/index.ipynb
@@ -1,1 +1,247 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# HTTP Request/Response Cycle - Lab\n", "\n", "## Introduction \n", "\n", "In this lab, we'll make use of the `requests` module commands and properties seen in the previous lesson, to extract information for a web service called **\"Open Notify\"** to access NASA's space data. \n", "\n", "## Objectives\n", "\n", "You will be able to:\n", "\n", "* Explain the HTTP request/response cycle\n", "* List the status codes of responses and their meanings\n", "* Obtain and interpret status codes from responses\n", "* Make HTTP GET and POST requests in python using the `requests` library\n", "\n", "## Open Notify \n", "\n", "[Open Notify](http://open-notify.org/)  is an an open source project to provide a simple programming interface for some of NASA\u2019s awesome data. This takes live raw data from NASA's systems and turn them into APIs related to space and spacecraft. We can access the following information from open notify. \n", "\n", "* Current Location of the International Space Station\n", "\n", "* Number of People in Space\n", "\n", "* Overhead Pass Predictions for the International Space Station\n", "    \n", "### API endpoints\n", "\n", "Open Notify has several API endpoints. \n", ">An endpoint is a server route that is used to retrieve different data from the API. \n", "\n", "For example, the `/comments` endpoint on the Reddit API might retrieve information about comments, whereas the `/users` endpoint might retrieve data about users. To access them, you would add the endpoint to the base url of the API.\n", "\n", "For the OpenNotify API, we have the following endpoints: \n", "\n", "1. Current Location of the International Space Station `/iss-now.json`\n", "2. Number of People in Space `/astros.json`\n", "3. Overhead Pass Predictions for the International Space Station `/iss-pass.json`    \n", "\n", "The `.json` extension simply tells us that the data is being returned in a JSON format.\n", "\n", "In this lab, we'll be querying this API to retrieve live data about the International Space Station (ISS). Details on OpenNofity, endpoints, syntax, and the services it offers can be viewed [Here](http://open-notify.org/Open-Notify-API/)\n", "\n", "![](images/iss.jpg)\n", "\n", "### Current location of International Space Station\n", "\n", "The first endpoint we'll look at on Open Notify is the ` iss-now.json` endpoint (current location of international space station). This endpoint gets the current latitude and longitude of the International Space Station.  Perform the following tasks \n", "* Make a get request to get the latest position of the international space station from the opennotify api's `iss-now` endpoint at http://api.open-notify.org/iss-now.json\n", "* Check the status code of the response\n", "* Interpret the returned code"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your Code Here"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your comments "]}, {"cell_type": "markdown", "metadata": {}, "source": ["* Print the contents of the response and identify its current location"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your Code Here"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#\u00a0Interpret your results using the API"]}, {"cell_type": "markdown", "metadata": {}, "source": ["### Number of people in space\n", "\n", "Let's repeat the above for the second endpoint, `astros.json`. It tells you how many people are currently in space. The format of the responses can be studied [HERE](http://open-notify.org/Open-Notify-API/People-In-Space/).\n", "\n", "Read the above documentation and perform the following tasks:\n", "\n", "* Get the response from astros.json endpoint\n", "* Count how many people are currently in space\n", "* List the names of people currently in space."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your Code Here"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Interpret the Results - How many people are in space and what are their names "]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Summary \n", "\n", "In this lesson, we saw how we can use request and response methods to query an Open API. We also saw how to look at the contents returned with the API calls and how to parse them. Next, we'll look at connecting to APIs which are not OPEN, i.e. we would need to pass in some authentication information and filter the results. "]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.8.5"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HTTP Request/Response Cycle - Lab\n",
+    "\n",
+    "## Introduction \n",
+    "\n",
+    "In this lab, we'll make use of the `requests` module commands and properties seen in the previous lesson, to extract information for a web service called **\"Open Notify\"** to access NASA's space data. \n",
+    "\n",
+    "## Objectives\n",
+    "\n",
+    "You will be able to:\n",
+    "\n",
+    "* Explain the HTTP request/response cycle\n",
+    "* List the status codes of responses and their meanings\n",
+    "* Obtain and interpret status codes from responses\n",
+    "* Make HTTP GET and POST requests in python using the `requests` library\n",
+    "\n",
+    "## Open Notify \n",
+    "\n",
+    "[Open Notify](http://open-notify.org/)  is an an open source project to provide a simple programming interface for some of NASA’s awesome data. This takes live raw data from NASA's systems and turn them into APIs related to space and spacecraft. We can access the following information from open notify. \n",
+    "\n",
+    "* Current Location of the International Space Station\n",
+    "\n",
+    "* Number of People in Space\n",
+    "\n",
+    "* Overhead Pass Predictions for the International Space Station\n",
+    "    \n",
+    "### API endpoints\n",
+    "\n",
+    "Open Notify has several API endpoints. \n",
+    ">An endpoint is a server route that is used to retrieve different data from the API. \n",
+    "\n",
+    "For example, the `/comments` endpoint on the Reddit API might retrieve information about comments, whereas the `/users` endpoint might retrieve data about users. To access them, you would add the endpoint to the base url of the API.\n",
+    "\n",
+    "For the OpenNotify API, we have the following endpoints: \n",
+    "\n",
+    "1. Current Location of the International Space Station `/iss-now.json`\n",
+    "2. Number of People in Space `/astros.json`\n",
+    "3. Overhead Pass Predictions for the International Space Station `/iss-pass.json`    \n",
+    "\n",
+    "The `.json` extension simply tells us that the data is being returned in a JSON format.\n",
+    "\n",
+    "In this lab, we'll be querying this API to retrieve live data about the International Space Station (ISS). Details on OpenNofity, endpoints, syntax, and the services it offers can be viewed [Here](http://open-notify.org/Open-Notify-API/)\n",
+    "\n",
+    "![](images/iss.jpg)\n",
+    "\n",
+    "### Current location of International Space Station\n",
+    "\n",
+    "The first endpoint we'll look at on Open Notify is the ` iss-now.json` endpoint (current location of international space station). This endpoint gets the current latitude and longitude of the International Space Station.  Perform the following tasks \n",
+    "* Make a get request to get the latest position of the international space station from the opennotify api's `iss-now` endpoint at http://api.open-notify.org/iss-now.json\n",
+    "* Check the status code of the response\n",
+    "* Interpret the returned code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "resp = requests.get('http://api.open-notify.org/iss-now.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resp.status_code == requests.codes.ok"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Print the contents of the response and identify its current location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"message\": \"success\", \"iss_position\": {\"latitude\": \"20.8551\", \"longitude\": \"-122.3284\"}, \"timestamp\": 1679307676}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(resp.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# it gives the location of the space station and a timestamp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number of people in space\n",
+    "\n",
+    "Let's repeat the above for the second endpoint, `astros.json`. It tells you how many people are currently in space. The format of the responses can be studied [HERE](http://open-notify.org/Open-Notify-API/People-In-Space/).\n",
+    "\n",
+    "Read the above documentation and perform the following tasks:\n",
+    "\n",
+    "* Get the response from astros.json endpoint\n",
+    "* Count how many people are currently in space\n",
+    "* List the names of people currently in space."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resp_2 = requests.get('http://api.open-notify.org/astros.json')\n",
+    "resp_2.status_code == requests.codes.ok"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fei Junlong\n",
+      "Deng Qingming\n",
+      "Zhang Lu\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[print(x['name']) for x in resp_2.json()['people'] if x['craft'] == 'Shenzhou 15']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# There are 10 total people between the ISS and  \n",
+    "\n",
+    "# ISS (7): \n",
+    "# Sergey Prokopyev, Dmitry Petelin, Frank Rubio, Stephen Bowen,\n",
+    "# Warren Hoburg, Sultan Alneyadi, Andrey Fedyaev\n",
+    "\n",
+    "# Shenzhou 15 (3):\n",
+    "# Fei Junlong, Deng Qingming, Zhang Lu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary \n",
+    "\n",
+    "In this lesson, we saw how we can use request and response methods to query an Open API. We also saw how to look at the contents returned with the API calls and how to parse them. Next, we'll look at connecting to APIs which are not OPEN, i.e. we would need to pass in some authentication information and filter the results. "
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
